<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".features.login.view.impl.LoginActivity">

    <ScrollView
        android:id="@+id/scrollView_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_username"
                android:hint="@string/hint_username"
                style="@style/TextInputLayout">
                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                android:hint="@string/hint_password"
                style="@style/TextInputLayout">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioGroup_gender"
                android:layout_width="match_parent"
                android:checkedButton="@id/radio_male"
                android:layout_marginTop="@dimen/margin_padding_average"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_padding_minimal"
                    android:fontFamily="sans-serif-medium"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:tag="Male"
                    android:text="@string/label_male_token" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_padding_minimal"
                    android:fontFamily="sans-serif-medium"
                    android:tag="Female"
                    android:text="@string/label_female_token" />
            </RadioGroup>


            <FrameLayout
                android:id="@+id/wrapper_clickable_login"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_padding_maxmax">

                <TextView
                    style="@style/ButtonText"
                    android:text="@string/label_login" />

            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
