<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".features.login.view.impl.LoginActivity">

    <ScrollView
        android:id="@+id/scrollView_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-black"
                android:text="@string/search_result"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorRed"
                android:textSize="36sp"
                android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_max"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/dummy_cnic"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewMobileNumber"
                style="@style/Text"
                android:gravity="center"
                android:text="Mobile# 0123456789" />

            <TextView
                android:id="@+id/textViewTokenNumber"
                style="@style/Text"
                android:gravity="center"
                android:text="Token# 789" />

        </LinearLayout>

            <FrameLayout
                android:id="@+id/wrapper_clickable_reprintToken"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_padding_maxmax">

                <TextView
                    style="@style/ButtonText"
                    android:text="@string/label_reprint_token" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/wrapper_clickable_back"
                style="@style/Button"
                android:background="@drawable/selector_button_red"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_padding_max">

                <TextView
                    style="@style/ButtonText"
                    android:text="@string/label_cancel" />
            </FrameLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
